; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_ike_compare.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_ike_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_app_state = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pf_app_state*, %struct.pf_app_state*)* @pf_ike_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pf_ike_compare(%struct.pf_app_state* %0, %struct.pf_app_state* %1) #0 {
  %3 = alloca %struct.pf_app_state*, align 8
  %4 = alloca %struct.pf_app_state*, align 8
  %5 = alloca i64, align 8
  store %struct.pf_app_state* %0, %struct.pf_app_state** %3, align 8
  store %struct.pf_app_state* %1, %struct.pf_app_state** %4, align 8
  %6 = load %struct.pf_app_state*, %struct.pf_app_state** %3, align 8
  %7 = getelementptr inbounds %struct.pf_app_state, %struct.pf_app_state* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.pf_app_state*, %struct.pf_app_state** %4, align 8
  %12 = getelementptr inbounds %struct.pf_app_state, %struct.pf_app_state* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = sub nsw i64 %10, %15
  store i64 %16, i64* %5, align 8
  %17 = load i64, i64* %5, align 8
  %18 = icmp sgt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  br label %25

20:                                               ; preds = %2
  %21 = load i64, i64* %5, align 8
  %22 = icmp slt i64 %21, 0
  %23 = zext i1 %22 to i64
  %24 = select i1 %22, i32 -1, i32 0
  br label %25

25:                                               ; preds = %20, %19
  %26 = phi i32 [ 1, %19 ], [ %24, %20 ]
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
